--- a/examples/webgl_shadowmap_performance.html
+++ b/examples/webgl_shadowmap_performance.html
@@ -107,7 +107,11 @@
 
 				light.castShadow = true;
 
-				light.shadow = new THREE.LightShadow( new THREE.PerspectiveCamera( 50, 1, 700, FAR ) );
+				light.shadow.camera.fov = 50;
+				light.shadow.camera.aspect = 1;
+				light.shadow.camera.near = 700;
+				light.shadow.camera.far = FAR;
+				light.shadow.cameraAutoUpdate = false;
 
 				light.shadow.bias = 0.0001;
 
