SpotLightShadow.cameraAutoUpdate -> Light.shadowAutoUpdate

--- a/examples/webgl_geometry_spline_editor.html
+++ b/examples/webgl_geometry_spline_editor.html
@@ -99,7 +99,7 @@
 				light.shadow.camera.aspect = 1;
 				light.shadow.camera.near = 200;
 				light.shadow.camera.far = 2000;
-				light.shadow.cameraAutoUpdate = false;
+				light.shadowAutoUpdate = false;
 				light.shadow.bias = -0.000222;
 				light.shadow.mapSize.width = 1024;
 				light.shadow.mapSize.height = 1024;
