--- a/examples/webgl_shading_physical.html
+++ b/examples/webgl_shading_physical.html
@@ -251,7 +251,7 @@
 				sunLight.shadow.camera.aspect = 1;
 				sunLight.shadow.camera.near = shadowConfig.shadowCameraNear;
 				sunLight.shadow.camera.far = shadowConfig.shadowCameraFar;
-				sunLight.shadow.cameraAutoUpdate = false;
+				sunLight.shadowAutoUpdate = false;
 				sunLight.shadow.bias = shadowConfig.shadowBias;
 
 				scene.add( sunLight );
