--- a/examples/webgl_shadowmap.html
+++ b/examples/webgl_shadowmap.html
@@ -116,7 +116,7 @@
 				light.shadow.camera.aspect = 1;
 				light.shadow.camera.near = 1200;
 				light.shadow.camera.far = 2500;
-				light.shadow.cameraAutoUpdate = false;
+				light.shadowAutoUpdate = false;
 
 				light.shadow.bias = 0.0001;
 
