--- a/examples/webgl_shadowmap_performance.html
+++ b/examples/webgl_shadowmap_performance.html
@@ -111,7 +111,7 @@
 				light.shadow.camera.aspect = 1;
 				light.shadow.camera.near = 700;
 				light.shadow.camera.far = FAR;
-				light.shadow.cameraAutoUpdate = false;
+				light.shadowAutoUpdate = false;
 
 				light.shadow.bias = 0.0001;
 
